# Kanban-Lite

./: .gitignore  CMakeLists.txt  README.md  run_gui.sh
.github/workflows/: ci.yml
data/: .gitignore  README.md
design/: README_design.md  class_diagram.puml
docs/: build_guide.md
include/: ActivityLog.h  Board.h  Card.h  Column.h  User.h
src/: ActivityLog.cpp  Board.cpp  CMakeLists.txt  Card.cpp  Column.cpp  User.cpp  main.cpp
tests/: cli_tests.sh  demo_gui.sh  gui_tests.cpp  persistence_tests.cpp  test_headers.cpp
ui/: BoardView.cpp  BoardView.h  CMakeLists.txt  CardEditDialog.cpp  CardEditDialog.h  CardView.cpp  CardView.h  ColumnView.cpp  ColumnView.h  MainWindow.cpp  MainWindow.h  main_gui.cpp
